effect double scroll

--- a/index.html
+++ b/index.html
@@ -24,19 +24,29 @@
             </ul>
             <ul class="logo">
                 <li><a href="">
-                        <h1><img src="./src/assets/img/logowhite.png" alt="logo"></h1>
-                    </a></li>
+                    <h1><img src="./src/assets/img/logowhite.png" alt="logo"></h1>
+                </a></li>
             </ul>
             <ul>
                 <li><a href="">home</a></li>
                 <li><a href="">home</a></li>
                 <li><a href="">home</a></li>
                 <li><a href="">home</a></li>
-                <li><a href=""><span class="icon-search"></span></a></li>
-                <li><a href=""><span class="icon-share2"></span></a></li>
-                <li><a class="shop" href=""><span class="icon-cart"></span></a></li>
+                <li class="social"><a href=""><span class="icon-search"></span></a></li>
+                <li class="social"><a href=""><span class="icon-share2"></span></a></li>
+                <li class="social"><a class="shop" href=""><span class="icon-cart"></span></a></li>
             </ul>
         </nav>
+        <div class="responsive-menu">
+            <a class="logo-resp" href="">
+                <h1><img src="./src/assets/img/logowhite.png" alt="logo"></h1>
+            </a>
+            <button  class="sandwich">
+                    <span class="top"></span>
+                    <span class="middle"></span>
+                    <span class="bottom"></span>
+            </button>
+        </div>
     </header>
 
     <div class="bloc-color_button">
@@ -131,7 +141,6 @@
             <div class="ms-section section-amber">
                 <div class="bloc bloc-text">
                     <div class="text">
-                        <img src="./src/assets/img/Logo.png" alt="logo bellatrix">
                         <h2>amber liqueur</h2>
                         <p class="lato">the agency that will make you change the way you sell</p>
                         <p class="italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
