--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bellatrix</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Merriweather:300i,400,700|Open+Sans:600" rel="stylesheet">
-    <link href="src/assets/css/aloha.css" rel="stylesheet">
+    <link href="src/assets/css/style.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/multiscroll.js/0.2.2/jquery.multiscroll.min.css">
     <link href="src/assets/fonts/style.css" rel="stylesheet">
 </head>
@@ -17,10 +17,10 @@
         <nav>
             <ul>
                 <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
+                <li><a href="">about us</a></li>
+                <li><a href="">services</a></li>
+                <li><a href="">portfolio</a></li>
+                <li><a href="">contact</a></li>
             </ul>
             <ul class="logo">
                 <li><a href="">
@@ -28,10 +28,10 @@
                 </a></li>
             </ul>
             <ul>
-                <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
-                <li><a href="">home</a></li>
+                <li><a href="">template</a></li>
+                <li><a href="">team</a></li>
+                <li><a href="">shop</a></li>
+                <li><a href="">blog</a></li>
                 <li class="social"><a href=""><span class="icon-search"></span></a></li>
                 <li class="social"><a href=""><span class="icon-share2"></span></a></li>
                 <li class="social"><a class="shop" href=""><span class="icon-cart"></span></a></li>
@@ -209,7 +209,7 @@
         crossorigin="anonymous"></script>
     <script src="./vendors/jquery.easings.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/multiscroll.js/0.2.2/jquery.multiscroll.extensions.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./src/assets/js/custom/slider.min.js"></script>
 </body>
 
 </html>
