new gulp prob js ok

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bellatrix</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Merriweather:300i,400,700|Open+Sans:600" rel="stylesheet">
-    <link href="src/assets/css/style.min.css" rel="stylesheet">
+    <link href="src/assets/build/css/style.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/multiscroll.js/0.2.2/jquery.multiscroll.min.css">
-    <link href="src/assets/fonts/style.css" rel="stylesheet">
+    <link href="src/assets/dev/fonts/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             </ul>
             <ul class="logo">
                 <li><a href="">
-                    <h1><img src="./src/assets/img/logowhite.png" alt="logo"></h1>
+                    <h1><img src="./src/assets/build/img/logowhite.png" alt="logo"></h1>
                 </a></li>
             </ul>
             <ul>
@@ -39,7 +39,7 @@
         </nav>
         <div class="responsive-menu">
             <a class="logo-resp" href="">
-                <h1><img src="./src/assets/img/logowhite.png" alt="logo"></h1>
+                <h1><img src="./src/assets/build/img/logowhite.png" alt="logo"></h1>
             </a>
             <button  class="sandwich">
                     <span class="top"></span>
@@ -63,7 +63,7 @@
             <div class="ms-section section-mimosa">
                 <div class="bloc bloc-text">
                     <div class="text">
-                        <img class="bloc-text_logo" src="./src/assets/img/mimologo.png" alt="logo bellatrix">
+                        <img class="bloc-text_logo" src="./src/assets/build/img/mimologo.png" alt="logo bellatrix">
                         <h2>mimosa apps</h2>
                         <p class="lato">the agency that will make you change the way you sell</p>
                         <p class="italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -75,8 +75,8 @@
             </div>
             <div class="ms-section section-gatria">
                 <div class="bloc bloc-color">
-                    <div class="bloc-color_img"><img src="./src/assets/img/byhydrus.png" alt="logo bellatrix"></div>
-                    <div class="bloc-color_img"><img src="./src/assets/img/aday.png" alt="logo bellatrix"></div>
+                    <div class="bloc-color_img"><img src="./src/assets/build/img/byhydrus.png" alt="logo bellatrix"></div>
+                    <div class="bloc-color_img"><img src="./src/assets/build/img/aday.png" alt="logo bellatrix"></div>
                 </div>
             </div>
             <div class="ms-section section-adhara">
@@ -88,7 +88,7 @@
                             tempor
                             incididunt ut labore
                             et dolore magna aliqua. Ut enim ad.</p>
-                        <img class="signature" src="./src/assets/img/firm1.png" alt="logo bellatrix">
+                        <img class="signature" src="./src/assets/build/img/firm1.png" alt="logo bellatrix">
                     </div>
                 </div>
 
@@ -107,7 +107,7 @@
             <div class="ms-section section-bella">
                 <div class="bloc bloc-text">
                     <div class="text">
-                        <img class="bloc-text_logo" src="./src/assets/img/Logo.png" alt="logo bellatrix">
+                        <img class="bloc-text_logo" src="./src/assets/build/img/Logo.png" alt="logo bellatrix">
                         <h2>we are bellatrix</h2>
                         <p class="lato">the agency that will make you change the way you sell</p>
                         <p class="italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -130,7 +130,7 @@
                             tempor
                             incididunt ut labore
                             et dolore magna aliqua. Ut enim ad.</p>
-                        <img class="signature" src="./src/assets/img/firm1.png" alt="logo bellatrix">
+                        <img class="signature" src="./src/assets/build/img/firm1.png" alt="logo bellatrix">
                     </div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                             tempor
                             incididunt ut labore
                             et dolore magna aliqua. Ut enim ad.</p>
-                        <img class="signature" src="./src/assets/img/firm1.png" alt="logo bellatrix">
+                        <img class="signature" src="./src/assets/build/img/firm1.png" alt="logo bellatrix">
                     </div>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                 <footer>
                     <div class="footer-first">
                         <div class="bloc-footer">
-                            <img src="./src/assets/img/LogoWhite2.png" alt="logo bellatrix">
+                            <img src="./src/assets/build/img/LogoWhite2.png" alt="logo bellatrix">
                             <p>The agency that will make you change the way you sell</p>
                         </div>
                         <div class="bloc-footer">
@@ -178,14 +178,14 @@
                         <div class="bloc-footer">
                             <h3>Recet Tweets</h3>
                             <div class="bloc-footer_tweet">
-                                <img src="./src/assets/img/h.png" alt="H">
+                                <img src="./src/assets/build/img/h.png" alt="H">
                                 <p><span>RT </span>“@astro_reid: Our gorgeous Earth
                                     at night under a <span>#fullmoonpic.twitter
                                         .com/PSyrUDiZ8x”</span>
                                 </p>
                             </div>
                             <div class="bloc-footer_tweet">
-                                <img src="./src/assets/img/h.png" alt="H">
+                                <img src="./src/assets/build/img/h.png" alt="H">
                                 <p><span>@astro_reid</span> Fantastic picture! Could
                                     you give us the settings you used?
                                     ISO, time, f/stop etc?
@@ -209,7 +209,7 @@
         crossorigin="anonymous"></script>
     <script src="./vendors/jquery.easings.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/multiscroll.js/0.2.2/jquery.multiscroll.extensions.min.js"></script>
-    <script src="./src/assets/js/custom/slider.min.js"></script>
+    <script src="./src/assets/build/js/custom/slider.min.js"></script>
 </body>
 
 </html>
